Only remains to fix the overlapping issue

--- a/src/main/resources/static/css/sidebars.css
+++ b/src/main/resources/static/css/sidebars.css
@@ -67,13 +67,6 @@ main {
   left: 1%;
 }
 
-#container{
-  position: fixed;
-  top: 0;
-  left: auto;
-  /* height: 99vh; Ajusta la altura según tus necesidades */
-}
-
 .gray{
   background-color: rgb(230, 230, 230);
 }
